# email-dispatcher

./: .env.example  .gitignore  README.md  docker-compose.yml
email-agent/: Dockerfile  README.md  pyproject.toml
email-agent/app/: main.py
email-agent/app/agent/: email_agent.py
email-agent/app/api/: routes.py
email-agent/app/core/: config.py
email-agent/app/messaging/: connection.py  consumer.py
email-dispatcher-api/: pom.xml
email-dispatcher-api/docker/: Dockerfile
email-dispatcher-api/src/main/java/com/infnet/emaildispatcher/: EmailDispatcherApiApplication.java
email-dispatcher-api/src/main/java/com/infnet/emaildispatcher/application/usecase/: CrmUseCase.java  (+1 more)
email-dispatcher-api/src/main/java/com/infnet/emaildispatcher/config/: CrmProviderFactory.java  FeignConfig.java  RabbitMqConfig.java  UseCaseBeanConfig.java
email-dispatcher-api/src/main/resources/: application.yml
email-dispatcher-api/src/test/java/com/infnet/emaildispatcher/: EmailDispatcherApiApplicationTests.java
email-dispatcher-api/src/test/resources/: application.yml
email-dispatcher-web/: Dockerfile  README.md  angular.json  nginx.conf  package.json
email-dispatcher-web/.angular/cache/17.3.17/email-dispatcher-web/: .tsbuildinfo
email-dispatcher-web/src/: index.html  styles.css
email-dispatcher-web/src/app/: app.component.ts  app.routes.ts
email-dispatcher-web/src/app/components/deal-detail/: deal-detail.component.ts
email-dispatcher-web/src/app/components/deal-list/: deal-list.component.ts
email-dispatcher-web/src/app/services/: deal.model.ts  deal.service.ts
(+18 files in other folders)
