[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pika>=1.4.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.20",
]
