[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pika>=1.4.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.20",
]
